--- a/HW JS/HW 12/index.html
+++ b/HW JS/HW 12/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="wrapper">
-                <a href="index.html"><img id="logo" src="Pizza_pictures/Carlo.png" alt="Логотип Папа Карло"></a>
+                <a href="index.html"><img id="logo" src="Pizza_pictures/Carlo.png" alt="Dominos Pizza"></a>
             <nav>
                 <ul>
                     <li>Конструктор піцци</li>
@@ -79,6 +79,13 @@
             <div class="sauces"><p>Соуси:</p></div>
             <div class="topings"><p>Топiнги:</p></div>
         </div>
+        <button class="butt-prev">Prev</button>
+        <div class="slider">
+                <div class="slider-img first"><img src="./Pizza_pictures/slide1.jpg" alt=""></div>
+                <div class="slider-img"><img src="./Pizza_pictures/slide2.jpg" alt=""></div>
+                <div class="slider-img"><img src="./Pizza_pictures/slide3.jpg" alt=""></div>
+        </div>
+        <button class="butt-next">Next</button>
     </main>
     <footer>
         <h2>Пiдтверди замовлення</h2>
@@ -98,6 +105,8 @@
         <address>© 2002–2020 Мережа піцерій Domino!</address>
     </footer>
     <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <script src="./JQuery.js"></script>
 </body>
 
 </html>
